<resources>
    <string name="app_name" translatable="false">Power Cloner</string>
    <string name="clone_label_tag" translatable="false">%s +</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="share_with_friends_tip">I am glad to invite you to use this wonderful application %s. You can download it here:</string>
    <string name="feel_lucky" translatable="false">Feel Lucky</string>
    <string name="add_clone_title">Create Clone</string>
    <string name="creating_clones">Creating Clones ...</string>
    <string name="hot_clone_title">Hot Cloned</string>
    <string name="hot_clone_detail">Enjoy double fun with double accounts online meanwhile!</string>
    <string name="other_clone_title">More Supported</string>
    <string name="other_clone_detail">Create clone in another space and enjoy more fun!</string>
    <string name="clone_action_txt" translatable="false">Clone with Power Cloner %s</string>
    <string name="app_slogan" translatable="false">DO Multiple, DO More Fun!</string>
    <string name="no_selection_for_clone">Please click and select items to clone.</string>
    <string name="create_shortcut">Shortcut</string>
    <string name="delete">Delete</string>
    <string name="more">Settings</string>
    <string name="toast_shortcut_added">Shortcut added</string>
    <string name="toast_shortcut_invalid">Shortcut is invalid</string>
    <string name="delete_dialog_title">Caution</string>
    <string name="arm64_dialog_title">Note</string>
    <string name="arm64_dialog_content">Detected 64bit libraries in %s. Suggest install 64bit support packages if meet error. Do you want to install now?</string>
    <string name="delete_dialog_content">Delete clone will totally remove its data. Do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="notification">Notification</string>
    <string name="privacy_locker">Privacy Locker</string>
    <string name="enable_locker">Enable Lock</string>
    <string name="disable_locker">Disable Lock</string>
    <string name="disable_notification">Disable Notification</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="ok" translatable="false">OK</string>
    <string name="congratulations">Congratulations</string>
    <string name="dialog_rating_us_content">Enjoy using Power Cloner app?</string>
    <string name="dialog_feedback_content">Would you kindly give us some feedback to help improve it?</string>
    <string name="not_really">Not Really</string>
    <string name="no_thanks">No, thanks</string>
    <string name="dialog_love_title" translatable="false">Love Power Cloner</string>
    <string name="dialog_love_content">Would you mind give us a 5-star rating on the Play Store? It will inspire us and we appreciate your support!</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="star_rating">Go 5-star rating</string>
    <string name="feedback">Feedback</string>
    <string name="ad_free">Remove Ads</string>
    <string name="share">Share</string>
    <string name="like_it" translatable="false">Love Power Cloner</string>
    <string name="rate_us">Rate Us</string>
    <string name="join_us">Join Community</string>
    <string name="follow_us" translatable="false">Follow Us</string>
    <string name="settings">Settings</string>
    <string name="arm64_support">64bit Support</string>
    <string name="install_arm64_support">If you meet crash or hang while opening cloned apps, it could due to the missing of 64bit support libraries. Please try install the 64bit support package to solve the issues.</string>
    <string name="installed_arm64_support">The 64bit support package is already installed.</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings_right" translatable="false">2018 RiverStone Tech. All rights reserved</string>
    <string name="toast_no_lucky">Sorry, no lucky content this time. Please try again later.</string>
    <string translatable="false" name="boost_title">Power Booster</string>
    <string name="app_starting_tips">%s is starting ...</string>
    <string name="start_with_arm64">Starting with Power Cloner 64bit support library...</string>
    <string name="first_start_tips">It may take a little longer for the first start.</string>
    <string name="upgrade_start_tips">It may take a little longer as this app was just upgraded.</string>
    <string name="lock_settings_title">Locker Settings</string>
    <string name="enable_lock_settings_title">Lock Power Cloner</string>
    <string name="been_locked">Privacy locker will protect %s.</string>
    <string name="unlock_main_app">Privacy Locker Is Protecting</string>
    <string name="unlock_before_disable">Privacy Locker Is Protecting</string>
    <string name="been_unlocked">%s is unlocked.</string>
    <string name="notification_enabled">Notification of %s is enabled.</string>
    <string name="notification_disabled">Notification of %s is disabled.</string>
    <string name="lock_interval_settings_title" translatable="false">Re-Lock Interval</string>
    <string name="lock_interval_settings_content">The interval to relock the app after you left it</string>
    <string name="enable_lock_settings_content">Unlock before enter into main application of Power Cloner</string>
    <string name="password_setting_title">Password Setting</string>
    <string name="password_set_no_question">No secure question set.</string>
    <string name="password_set_complete">Password was set.</string>
    <string name="no_password_set">Please set a password for locker at first.</string>
    <string name="password_setting_content">Click to set password and security question</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="lock_settings_for_apps">Enable privacy locker for cloned applications</string>
    <string name="al_lockpattern_confirm_unlock_pattern">Please Confirm Pattern</string>
    <string name="al_lockpattern_confirm_unlock_pattern_hint">Draw again</string>
    <string name="al_btn_reset">Reset</string>
    <string name="al_lockpattern_try_again">Patterns Do Not Match, Please Try Again.</string>
    <string name="applock_permission_contacts_toast">This helps you to retrieve your password.</string>
    <string name="al_lockpattern_create_unlock_pattern">Set a New Pattern</string>
    <string name="al_lockpattern_number_no_correct">Please Connect at Least 4 Dots</string>
    <string name="al_lockpattern_error">Wrong Pattern, Please Try Again.</string>
    <string name="al_changepassword">Change Password</string>
    <string name="al_unlcok_pattern">Unlock Pattern</string>
    <string name="al_change_security_question">Change Secure Question</string>
    <string name="app_lock_safe_info_hint">To verify your identity when reset password</string>
    <string name="app_lock_safe_question_hint">Set a Secure Question</string>
    <string name="app_lock_safe_answer_hint">Enter the answer (Up to 20 characters)</string>
    <string name="app_lock_verifier_tile">Set Secure Question</string>
    <string name="app_lock_reset_password">Reset passwords</string>
    <string name="app_lock_safe_answer_reset_hint">Please enter the answer</string>
    <string name="app_lock_date_picker_month">month</string>
    <string name="app_lock_safe_question_toast_ask_Question">You didn\'t set a Secure Question</string>
    <string name="app_lock_safe_question_toast_ask_Answer">You didn\'t enter answer yet.</string>
    <string name="app_lock_safe_question_toast_error">Authentication failed, please enter again</string>
    <string name="applock_window_title">Cloned %s</string>
    <string name="applock_forgot_password"><u>Forgot Password?</u></string>
    <string name="need_set_secure_answer">Please set answer for secure question and then press confirm button.</string>
    <string name="al_lockpattern_draw_unlock_pattern">Draw Pattern to Unlock</string>
    <string name="al_btn_finish">Confirm</string>
    <string name="al_btn_next">Next</string>
    <string name="settings_shortcut_title">Shortcut</string>
    <string name="settings_shortcut_content">Enable to auto-add shortcut when cloning apps</string>
    <string name="notification_decription">Enable or disable notifications from cloned application</string>
    <string name="notification_detail_setting">Enable notification for app</string>
    <string name="check_update"><u>Check Update</u></string>
    <string name="feedback_hint">Please tell us the detail about the problem you met , and please tell us the steps to reproduce it and better with screenshot.</string>
    <string name="button_submit">Submit</string>
    <string name="extra_feedback_decription">We will resolve the issue for you ASAP and appreciate your help to improve the product!</string>
    <string name="text_Q1_title" translatable="false">Q1: Why cannot I receive message notifications from Power Cloner enabled apps?</string>
    <string name="text_Q1_content_2" translatable="false">A1: Please ensure that Power Cloner has network access</string>
    <string name="text_Q2_title">Q2: Will Power Cloner collect and use my private information?</string>
    <string name="text_Q2_content">A2: No, Power Cloner will only collect small amounts of your “public data” (e.g. Avatar, nickname etc), and these will only be used within your device to create a better user experience for you. Power Cloner promises that none of your private data will be collected or used.</string>
    <string name="text_Q3_title">Q3: Why is Power Cloner’s storage consumption increasing?</string>
    <string name="text_Q3_content">A3: All sub-accounts added on your device are by default listed under Power Cloner by the Android operating system. For example, when you add a Facebook sub-account to your device, all of the storage used for your second Facebook account (app) is listed under Power Cloner. Therefore, the storage consumption listed for Power Cloner will appear to increase significantly when you add more sub-accounts. Rest assured that the storage consumption of Power Cloner itself is not actually increasing by much.</string>
    <string name="text_Q4_title">Q4: Why has Power Cloner used up so much storage space?</string>
    <string name="text_Q4_content">A4: All sub-accounts added on your device are by default listed under Power Cloner by the Android operating system. The large amount of storage consumption listed under Power Cloner is the overall total storage used for all sub-accounts you’ve added. Power Cloner itself uses little storage.</string>
    <string name="text_Q5_title">Q5: How does Power Cloner’s Private App function protects my privacy?</string>
    <string name="text_Q5_content">A5: A password is required to access Private Apps each time you wake your device. Additionally, all Private Apps are installed on Power Cloner, and therefore all Private Apps’ data are not accessible by any external programs.</string>
    <string name="text_Q6_title">Q6: Why privacy locker not show up when app launch?</string>
    <string name="text_Q6_content">A6: Please check whether you enabled locker for this app and grant permission to Power Cloner to show floating window. For example, on Xiaomi device, Settings->App Management->Power Cloner->Permission Control->Floating Window.</string>
    <string name="text_Q7_title">Q7: Why shortcut cannot be created or camera, location not work?</string>
    <string name="text_Q7_content">A7: Please check whether you granted these permissions to Power Cloner in your system setting.</string>
    <string name="customize_title">Customize Clone</string>
    <string name="saturation">Saturation</string>
    <string name="light">Lightness</string>
    <string name="hue">Hue</string>
    <string name="badge">Badge</string>
</resources>