<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_notification"
        android:title="@string/notification"
        android:icon="@drawable/icon_notification_small"
        />
    <item
        android:id="@+id/item_locker"
        android:title="@string/privacy_locker"
        android:icon="@drawable/icon_locker_small"
        />
    <item
        android:id="@+id/item_faq"
        android:title="@string/faq"
        android:icon="@drawable/icon_faq_small"
        />
    <!--<item-->
        <!--android:id="@+id/item_adfree"-->
        <!--android:title="@string/ad_free"-->
        <!--android:icon="@drawable/notification_icon_small"-->
        <!--/>-->
    <item
        android:id="@+id/item_share"
        android:title="@string/share"
        android:icon="@drawable/icon_share_small"
        />
    <item
        android:id="@+id/item_feedback"
        android:title="@string/feedback"
        android:icon="@drawable/icon_feedback_small"
        />
    <item
        android:id="@+id/item_setting"
        android:title="@string/settings"
        android:icon="@drawable/icon_setting_small"
        />
    <item
        android:id="@+id/item_arm64"
        android:title="@string/arm64_support"
        android:icon="@drawable/icon_arm64"
        />
</menu>